DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2011-08-24 patrick     Implemented multi-click handling in
                       gadget::MouseClickEventInterface.
                       NEW VERSION: 2.1.20
2011-08-22 patrick     Changed input device type identification from string
                       name to integer type ID. Subclasses of gadget::Input
                       must now implement getTypeId() and not getTypeName().
                       This is handled automatically by gadget::InputDevice<T>.
                       NEW VERSION: 2.1.19
2011-05-28 patrick     Replaced gadget::InputMixer<T1,T2> with
                       gadget::InputDevice<T>. The template parameter is
                       either one of the device base types (gadget::Digital,
                       gadget::Analog, etc.) or a combination of multiple
                       types produced using
                       boost::mpl::inherit<T1,T2,...,Tn>::type.
                       NEW VERSION: 2.1.18
2011-05-14 patrick     gadget::TypedProxy<T> now emits a signal
                       (proxyRefreshed) whenever its refresh() method is
                       invoked.
                       NEW VERSION: 2.1.17
2011-04-19 furlong.t   Added framework support for rumble-capable devices.
                       Authors: Todd Furlong, Daniel Heath, Jeff Baker.
                       NEW VERSION: 2.1.16
2011-03-19 patrick     Added support for Boost.Filesystem v3.
                       Submitted by Doug McCorkle.
                       NEW VERSION: 2.1.15
2011-03-19 patrick     The device unit number can now be changed using
                       gadget::TypedProxy<T>::set().
                       NEW VERSION: 2.1.14
2011-01-29 patrick     Fixed a bug in Cocoa keyboard/mouse event handling where
                       where the mask for mouse events could be computed
                       incorrectly.